crates/tui/src/ui/snapshots/cookie_agent_tui__ui__transcript__tests__approval_modal_no_color.snap
---
source: crates/tui/src/ui/transcript.rs
expression: "approval_terminal_snapshot(&approval, 80, 24, true, true)"
---
┌Approval · lines 46–66/66 · ↑/↓ PgUp/PgDn Home/End────────────────────────────┐
│   trace effect: Ask                                                          │
│   precedence reason: workspace read requires review                          │
│   candidate rules (1):                                                       │
│      1. rule id: workspace-read-review · source layer: workspace · effect:   │
│Ask                                                                           │
│2. resource binding digest:                                                   │
│<resource-2-binding-digest>              │
│   result effect: Ask                                                         │
│   trace action: ExternalDirectory                                            │
│   trace normalized resource: ../shared-config                                │
│   trace effect: Ask                                                          │
│   precedence reason: model requested access outside the workspace            │
│   candidate rules (1):                                                       │
│      1. rule id: external-directory-review · source layer: global · effect:  │
│Ask                                                                           │
│                                                                              │
│RESPONSE CONSTRAINTS                                                          │
│allow approve once: true                                                      │
│allow delegation-tree grant: false                                            │
│allow cancel: true                                                            │
│expires at: never                                                             │
│[Once]                    [Reject]                 [Cancel]                   │
└──────────────────────────────────────────────────────────────────────────────┘
