crates/tui/src/ui/snapshots/cookie_agent_tui__ui__transcript__tests__approval_modal_tiny_terminal.snap
---
source: crates/tui/src/ui/transcript.rs
expression: "approval_terminal_snapshot(&approval, 24, 8, false, false)"
---
┌Approval 1–5/126 ↑↓───┐
│PERMISSION REQUIRED · │
│ESCALATED             │
│consent target:       │
│./.cookie/config.toml │
│approval id:          │
│[Once] [Reject][Esc]  │
└──────────────────────┘
