crates/tui/src/ui/snapshots/cookie_agent_tui__ui__transcript__tests__parallel_tools_expanded_hit_regions_track_each_tool.snap
---
source: crates/tui/src/ui/transcript.rs
expression: rendered
---
╭─ primary • gateway/arbitrary-model[base]
│ launching both
│ 💻 ▾ bash sleep 2 …
│ ❯ sleep 2
│ model call: call-a
│ 💭 ▾ thought
│ ┆ waiting on both
│ > ▾ Read src/lib.rs
│ ran true
│ done
