crates/tui/src/ui/snapshots/cookie_agent_tui__ui__transcript__tests__parallel_tools_render_snapshot_across_widths_and_themes.snap
---
source: crates/tui/src/ui/transcript.rs
expression: "snapshots.join(\"\\n\")"
---
== width 24 ==
╭─ primary •
│ gateway/arbitrary-mode
│ l[base]
│ launching both
│ 💻 ▸ bash sleep 2 …
│ 💭 ▸ thought (1 lines
│ hidden)
│ > ▸ Read src/lib.rs
== width 48 ==
╭─ primary • gateway/arbitrary-model[base]
│ launching both
│ 💻 ▸ bash sleep 2 …
│ 💭 ▸ thought (1 lines hidden)
│ > ▸ Read src/lib.rs
== width 96 ==
╭─ primary • gateway/arbitrary-model[base]
│ launching both
│ 💻 ▸ bash sleep 2 …
│ 💭 ▸ thought (1 lines hidden)
│ > ▸ Read src/lib.rs
== mono 48 ==
╭─ primary • gateway/arbitrary-model[base]
│ launching both
│ 💻 ▸ bash sleep 2 …
│ 💭 ▸ thought (1 lines hidden)
│ > ▸ Read src/lib.rs
