crates/tui/src/ui/snapshots/cookie_agent_tui__ui__transcript__tests__queue_strip_renders_the_pending_lane.snap
---
source: crates/tui/src/ui/transcript.rs
expression: rendered
---
┌Conversation · events ≥ warning───────────────────────────┐│🍪  Fresh session, warm out of the oven.                   ││Type a message below to start · `ctrl+p` lists commands · ││`/help` shows help                                        ││                                                          ││                                                          ││                                                          ││                                                          ││                                                          ││                                                          ││                                                          ││                                                          ││                                                          │└──────────────────────────────────────────────────────────┘┌Pending · oldest <1m──────────────────────────────────────┐│⏳  1 first pending message                                ││⏳  2 second pending message                               ││⏳  3 third pending message                                │└──────────────────────────────────────────────────────────┘transport closed                                            ┌primary • gateway/arbitrary-model[base]───────────────────┐│Type a message · / for commands                           │└──────────────────────────────────────────────────────────┘◐ working                  auto-approve    `ctrl+p` commands
