crates/tui/src/ui/snapshots/cookie_agent_tui__ui__transcript__tests__selection_overlay_snapshot.snap
---
source: crates/tui/src/ui/transcript.rs
expression: overlay
---
┌Conversation · events ≥ warning───────────────────────────────────────────────┐
│┌─ USER                                                                       │
││ firs######################################################################  │
│############################################################################  │
│############################################################################  │
│##########uestion                                                             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
transport closed
┌primary • gateway/arbitrary-model[base]───────────────────────────────────────┐
│Type a message · / for commands                                               │
└──────────────────────────────────────────────────────────────────────────────┘
—                                              auto-approve    `ctrl+p` commands
