crates/tui/src/ui/snapshots/cookie_agent_tui__ui__transcript__tests__tool_code_views_snapshot.snap
---
source: crates/tui/src/ui/transcript.rs
expression: "snapshot_lines(&transcript_layout(&state, Some(&expanded), 60).lines)"
---
╭─ primary • gateway/arbitrary-model[base]
│ > ▾ Read src/main.rs
│    1 │ fn main() {
│ 1000 │     println!("hi");
│ metadata: {"kind":"text"}
│ ✏️ ▾ edit src/main.rs
│ arguments: filePath=src/main.rs (content shown below)
│ @@ -1 +1 @@
│ 1 - │ let old = 1;
│ 1 + │ let new = 2;
│ \ No newline at end of file
│ Edit applied atomically
