crates/tui/src/ui/snapshots/cookie_agent_tui__ui__transcript__tests__user_message_menu_snapshot.snap
---
source: crates/tui/src/ui/transcript.rs
expression: "rendered_frame(&mut app, 80, 24)"
---
┌Conversation · events ≥ warning───────────────────────────────────────────────┐│┌─ USER                                                                       │││ first question                                                              ││                                                                              ││┌─ USER                                                                       │││ second question                                                             ││                                                                              ││                                                                              ││                                                                              ││                  ┌Message actions─────────────────────────┐                  ││                  │> copy — message text to the clipboard  │                  ││                  │  revert — roll back to before this mes…│                  ││                  │  fork — branch a new session from this…│                  ││                  │                                        │                  ││                  └─↑↓ move · enter/c/r/f: run · esc: close┘                  ││                                                                              ││                                                                              ││                                                                              │└──────────────────────────────────────────────────────────────────────────────┘transport closed                                                                ┌primary • gateway/arbitrary-model[base]───────────────────────────────────────┐│Type a message · / for commands                                               │└──────────────────────────────────────────────────────────────────────────────┘—                                              auto-approve    `ctrl+p` commands
